--- a/Normal_J6/src/main/resources/static/adminAsset/components/products.html
+++ b/Normal_J6/src/main/resources/static/adminAsset/components/products.html
@@ -36,7 +36,7 @@
                 </div>
                 
                 <div class="form-group">
-                  <label>Select</label>
+                  <label>Category</label>
                   <select class="form-control" ng-model="categoryId">
                   <option value="">-Chọn category -</option>
                     <option value="{{ctg.id}}" ng-repeat= "ctg in category">{{ctg.name}}</option>
