--- a/Normal_J6/src/main/resources/templates/NguoiDung/chitiet.html
+++ b/Normal_J6/src/main/resources/templates/NguoiDung/chitiet.html
@@ -59,7 +59,7 @@
                                
                                     <div class="pro-actions">
                                         <div class="actions-primary">
-                                            <a href="../add/${product.id}" title="" data-original-title="Thêm vào giỏ hàng"> + Thêm vào giỏ hàng</a>
+                                            <a href="" th:attr="ng-click=@{|cart.add(${product.id})|}" title="" data-original-title="Thêm vào giỏ hàng"> + Thêm vào giỏ hàng</a>
                                         </div>
 
                                     </div>
