--- a/Normal_J6/src/main/resources/templates/NguoiDung/lienhe.html
+++ b/Normal_J6/src/main/resources/templates/NguoiDung/lienhe.html
@@ -8,33 +8,11 @@
 <body>
  <div class="contact-area ptb-100 ptb-sm-60">
             <div class="container">
-                <h3 class="mb-20">Liên hệ</h3>
-                <form id="contact-form" class="contact-form" action="mail.php" method="post">
-                    <div class="address-wrapper row">
-                        <div class="col-md-12">
-                            <div class="address-fname">
-                                <input class="form-control" type="text" name="name" placeholder="Tên">
-                            </div>
-                        </div>
-                        <div class="col-md-12">
-                            <div class="address-email">
-                                <input class="form-control" type="email" name="email" placeholder="Email">
-                            </div>
-                        </div>
-                      
-                        <div class="col-md-12">
-                            <div class="address-textarea">
-                                <textarea name="message" class="form-control" placeholder="Nội dung"></textarea>
-                            </div>
-                        </div>
-                    </div>
-                    <p class="form-message">
-                    <div class="footer-content mail-content clearfix">
-                        <div class="send-email float-md-right">
-                            <input value="Gửi" class="return-customer-btn" type="submit">
-                        </div>
-                    </div>
-                </form>
+                <h1 style="color:red" class="mb-20">Liên hệ</h1>
+  <h2>  >>> Số điện thoại: 0933399922</h2> 
+   <br>
+     
+   <h2> >>> Email : baodgpc01660@fpt.edu.vn</h2> 
             </div>
         </div>
         <!-- Contact Email Area End -->
