--- a/Normal_J6/src/main/resources/templates/layout/layout.html
+++ b/Normal_J6/src/main/resources/templates/layout/layout.html
@@ -53,9 +53,9 @@
                                 
 
                                   <div th:if="${#request.remoteUser}">
-                                       <li><a href="/changePass" th:text="#{lo.mn.changepass}" ></a></li>
-                                        <li><a href="/editProfile" th:text="#{lo.mn.updateacc}"  ></a></li>
-                                           <li><a href="../lichsu/${sessionScope.user.username}"  th:text="#{lo.mn.history}"></a></li>
+                                       <li><a th:href="@{/changePass}" th:text="#{lo.mn.changepass}" ></a></li>
+                                        <li><a th:href="@{/editProfile}" th:text="#{lo.mn.updateacc}"  ></a></li>
+                           <li><a th:href="@{/order/list}" th:text="#{lo.mn.history}"  ></a></li>
 
                                       <li><a th:href="@{/security/logout}" th:text="#{lo.mn.logout}"></a></li>
                                       
