--- a/Normal_J6/src/main/resources/templates/NguoiDung/dathang.html
+++ b/Normal_J6/src/main/resources/templates/NguoiDung/dathang.html
@@ -10,9 +10,9 @@
             <div class="container">
                 <div class="breadcrumb">
                     <ul class="d-flex align-items-center">
-                        <li><a href="trangchu">Trang chủ</a></li>
-                        <li><a href="giohang">Giỏ hàng</a></li>
-                        <li class="active"><a href="giohang">Đặt hàng</a></li>
+                        <li><a th:href="@{/index}">Trang chủ</a></li>
+                        <li><a th:href="@{/giohang}">Giỏ hàng</a></li>
+                        <li class="active"><a href="#">Đặt hàng</a></li>
                     </ul>
                 </div>
             </div>
