--- a/Normal_J6/src/main/resources/templates/admin/dashboard.html
+++ b/Normal_J6/src/main/resources/templates/admin/dashboard.html
@@ -73,35 +73,20 @@
             <ul class="dropdown-menu">
               <!-- User image -->
               <li class="user-header">
-                <img src="../adminAsset/dist/img/user2-160x160.jpg" class="img-circle" alt="User Image">
+                <img th:src="@{/img/2.png}" class="img-circle" alt="User Image">
 
                 <p>
-                  Alexander Pierce - Web Developer
-                  <small>Member since Nov. 2012</small>
+                  Normal - Web Developer
+              
                 </p>
               </li>
               <!-- Menu Body -->
-              <li class="user-body">
-                <div class="row">
-                  <div class="col-xs-4 text-center">
-                    <a href="#">Followers</a>
-                  </div>
-                  <div class="col-xs-4 text-center">
-                    <a href="#">Sales</a>
-                  </div>
-                  <div class="col-xs-4 text-center">
-                    <a href="#">Friends</a>
-                  </div>
-                </div>
-                <!-- /.row -->
-              </li>
+    
               <!-- Menu Footer-->
               <li class="user-footer">
-                <div class="pull-left">
-                  <a href="#" class="btn btn-default btn-flat">Profile</a>
-                </div>
+          
                 <div class="pull-right">
-                  <a href="#" class="btn btn-default btn-flat">Sign out</a>
+                  <a th:href="@{/security/logout}" class="btn btn-default btn-flat">Sign out</a>
                 </div>
               </li>
             </ul>
@@ -115,21 +100,13 @@
     </nav>
   </header>
 
-
-
-
-
-
-
-
-
 <aside class="main-sidebar" ng-controller="header-footer">
     <!-- sidebar: style can be found in sidebar.less -->
     <section class="sidebar" style="height: auto;">
       <!-- Sidebar user panel -->
       <div class="user-panel">
         <div class="pull-left image">
-          <img th:src="@{/img/1.png}" class="img-circle" alt="User Image">
+          <img th:src="@{/img/2.png}"  class="img-circle" alt="User Image">
         </div>
         <div class="pull-left info">
         <p> [[${#request.remoteUser}]]</p>
