--- a/Normal_J6/src/main/resources/templates/NguoiDung/trangchu.html
+++ b/Normal_J6/src/main/resources/templates/NguoiDung/trangchu.html
@@ -37,13 +37,13 @@
                 <!-- Hot Deal Product Activation Start -->
                 <div class="hot-deal-active owl-carousel">
                     <!-- Single Product Start -->
-                      <c:forEach var="HoLy" items="${page.content}">
-                    <div class="single-product">
+                      
+                    <div  th:each="HoLy:${page.content}" class="single-product">
                         <!-- Product Image Start -->
                         <div class="pro-img">
                             <a href="chitiet?id=${HoLy.id}">
-                                <img class="primary-img" src="img/products/${HoLy.image1 }" alt="single-product">
-                                <img class="secondary-img" src="img/products/${HoLy.image2 }" alt="single-product">
+                                <img class="primary-img" th:src="@{|/img/products/${HoLy.image}|}" alt="single-product">
+                                <img class="secondary-img" th:src="@{|/img/products/${HoLy.image}|}" alt="single-product">
                             </a>
                             <div class="countdown" data-countdown="2023/05/25"></div>
                            
@@ -52,20 +52,21 @@
                         <!-- Product Content Start -->
                         <div class="pro-content">
                             <div class="pro-info">
-                                <h4><a href="chitiet?id=${HoLy.id}">${HoLy.name }</a></h4>
-                                <p><span class="price">${HoLy.price }₫</span><del class="prev-price">${HoLy.price *100 /80}₫</del></p>
-                                <div class="label-product l_sale">-20<span class="symbol-percent">%</span></div>
+                                  <h4><a th:src="@{|/chitiet/${HoLy.id}|}">[[${HoLy.name}]]</a></h4>
+                                    <p><span class="price">[[${HoLy.unitPrice}]]₫</span></p>
+                          
+                           
                             </div>
                             <div class="pro-actions">
                                 <div class="actions-primary">
-                                    <a href="../add/${HoLy.id}" title="Thêm vào giỏ hàng"> + Thêm vào giỏ hàng</a>
+                                    <a href="#"  th:attr="ng-click=@{|cart.add(${HoLy.id})|}" title="Thêm vào giỏ hàng"> + Thêm vào giỏ hàng</a>
                                 </div>
                                
                             </div>
                         </div>
                         <!-- Product Content End -->
                     </div>
-                    </c:forEach>
+                 
                    
                       
   
