--- a/Normal_J6/src/main/resources/static/adminAsset/components/products.html
+++ b/Normal_J6/src/main/resources/static/adminAsset/components/products.html
@@ -24,15 +24,15 @@
             <!-- /.box-header -->
             <!-- form start -->
 
-            <form role="form"  method="POST" enctype="multipart/form-data" ng-submit="createProduct()">
+            <form role="form" method="POST" enctype="multipart/form-data" ng-submit="createProduct()">
        			<div class="box-body">
                 <div class="form-group">
                   <label for="exampleInputEmail1">Name Product</label>
-                  <input type="text" class="form-control" id="exampleInputEmail1" placeholder="Name Product" ng-model="nameProduct"  ng-required="true">
+                  <input type="text" class="form-control" id="exampleInputEmail1" placeholder="Name Product" ng-model="name">
                 </div>
                 <div class="form-group">
                   <label for="exampleInputPassword1">Price</label>
-                  <input type="number" class="form-control" id="exampleInputPassword1" placeholder="Price" ng-model="priceProduct" ng-required="true" min="1000">
+                  <input type="number" class="form-control" id="exampleInputPassword1" placeholder="Price" ng-model="unitPrice">
                 </div>
                 
                 <div class="form-group">
