--- a/Normal_J6/src/main/resources/templates/NguoiDung/trangchu.html
+++ b/Normal_J6/src/main/resources/templates/NguoiDung/trangchu.html
@@ -41,7 +41,7 @@
                     <div  th:each="HoLy:${page.content}" class="single-product">
                         <!-- Product Image Start -->
                         <div class="pro-img">
-                            <a href="chitiet?id=${HoLy.id}">
+                            <a th:src="@{|/chitiet/${HoLy.id}|}">
                                 <img class="primary-img" th:src="@{|/img/products/${HoLy.image}|}" alt="single-product">
                                 <img class="secondary-img" th:src="@{|/img/products/${HoLy.image}|}" alt="single-product">
                             </a>
@@ -59,7 +59,7 @@
                             </div>
                             <div class="pro-actions">
                                 <div class="actions-primary">
-                                    <a href="#"  th:attr="ng-click=@{|cart.add(${HoLy.id})|}" title="Thêm vào giỏ hàng"> + Thêm vào giỏ hàng</a>
+                                    <a href=""  th:attr="ng-click=@{|cart.add(${HoLy.id})|}" title="Thêm vào giỏ hàng"> + Thêm vào giỏ hàng</a>
                                 </div>
                                
                             </div>
@@ -103,16 +103,16 @@
                             <!-- Arrivals Product Activation Start Here -->
                             <div class="electronics-pro-active owl-carousel">
                                 <!-- Double Product Start -->
-                                 <c:forEach var="HoLy" items="${page2.content}">
+                              
                                
                                     <!-- Single Product Start -->
                                     
-                                    <div class="single-product">
+                                  <div  th:each="HoLy:${page2.content}" class="single-product">
                                         <!-- Product Image Start -->
                                         <div class="pro-img">
-                                            <a href="chitiet?id=${HoLy.id}">
-                                <img class="primary-img" src="img/products/${HoLy.image1 }" alt="single-product">
-                                <img class="secondary-img" src="img/products/${HoLy.image2 }" alt="single-product">
+                                            <a th:src="@{|/chitiet/${HoLy.id}|}">
+                          <img class="primary-img" th:src="@{|/img/products/${HoLy.image}|}" alt="single-product">
+                                <img class="secondary-img" th:src="@{|/img/products/${HoLy.image}|}" alt="single-product">
                             </a>
                                            
                                         </div>
@@ -120,13 +120,13 @@
                                         <!-- Product Content Start -->
                                         <div class="pro-content">
                                             <div class="pro-info">
-                                                <h4><a href="chitiet">${HoLy.name }</a></h4>
-                                                <p><span class="price">${HoLy.price }₫</span></p>
+                                                  <h4><a th:src="@{|/chitiet/${HoLy.id}|}">[[${HoLy.name}]]</a></h4>
+                                    <p><span class="price">[[${HoLy.unitPrice}]]₫</span></p>
                                                
                                             </div>
                                             <div class="pro-actions">
                                                 <div class="actions-primary">
-                                                      <a href="../add/${HoLy.id}" title="Thêm vào giỏ hàng"> + Thêm vào giỏ hàng</a>
+                                                      <a href=""  th:attr="ng-click=@{|cart.add(${HoLy.id})|}" title="Thêm vào giỏ hàng"> + Thêm vào giỏ hàng</a>
                                                 </div>
                                                 <div class="actions-secondary">
                                                   
@@ -141,7 +141,7 @@
                                     <!-- Single Product End -->
                                      <!-- Single Product Start -->
         
-                                  </c:forEach>
+                                
                                 <!-- Double Product End -->
                                 <!-- Double Product Start -->
                                
@@ -187,13 +187,12 @@
                             <!-- Arrivals Product Activation Start Here -->
                             <div class="best-seller-pro-active owl-carousel">
                                     <!-- Single Product Start -->
-                                    <c:forEach var="HoLy" items="${page3.content}">
-                                    <div class="single-product">
+                                  <div  th:each="HoLy:${page3.content}" class="single-product">
                                         <!-- Product Image Start -->
                                         <div class="pro-img">
-                                           <a href="chitiet?id=${HoLy.id}">
-                                <img class="primary-img" src="img/products/${HoLy.image1 }" alt="single-product">
-                                <img class="secondary-img" src="img/products/${HoLy.image2 }" alt="single-product">
+                                          <a th:src="@{|/chitiet/${HoLy.id}|}">
+                          <img class="primary-img" th:src="@{|/img/products/${HoLy.image}|}" alt="single-product">
+                                <img class="secondary-img" th:src="@{|/img/products/${HoLy.image}|}" alt="single-product">
                             </a>
                                            
                                         </div>
@@ -201,12 +200,12 @@
                                         <!-- Product Content Start -->
                                         <div class="pro-content">
                                             <div class="pro-info">
-                                                 <h4><a href="chitiet">${HoLy.name }</a></h4>
-                                                <p><span class="price">${HoLy.price }₫</span></p>
+                                                       <h4><a th:src="@{|/chitiet/${HoLy.id}|}">[[${HoLy.name}]]</a></h4>
+                                    <p><span class="price">[[${HoLy.unitPrice}]]₫</span></p>
                                             </div>
                                             <div class="pro-actions">
                                                 <div class="actions-primary">
-                                                   <a href="../add/${HoLy.id}" title="Thêm vào giỏ hàng"> + Thêm vào giỏ hàng</a>
+                                                  <a href=""  th:attr="ng-click=@{|cart.add(${HoLy.id})|}" title="Thêm vào giỏ hàng"> + Thêm vào giỏ hàng</a>
                                                 </div>
                                                 <div class="actions-secondary">
                                                   
@@ -216,7 +215,7 @@
                                         </div>
                                         <!-- Product Content End -->
                                     </div>
-                                    </c:forEach>
+                                    
                                     <!-- Single Product End -->
                                      <!-- Single Product Start -->
                                        
@@ -262,14 +261,12 @@
                     <h2 class="section-ttitle2 mb-30">Bạn có thể thích </h2>
                     <!-- Arrivals Product Activation Start Here -->
                     <div class="like-pro-active owl-carousel">
-                          <c:forEach var="HoLy" items="${page4.content}">
-                            <!-- Single Product Start -->
-                            <div class="single-product">
+                       <div  th:each="HoLy:${page3.content}" class="single-product">
                                 <!-- Product Image Start -->
                                 <div class="pro-img">
-                                     <a href="chitiet?id=${HoLy.id}">
-                                <img class="primary-img" src="img/products/${HoLy.image1 }" alt="single-product">
-                                <img class="secondary-img" src="img/products/${HoLy.image2 }" alt="single-product">
+                                     <a th:src="@{|/chitiet/${HoLy.id}|}">
+                          <img class="primary-img" th:src="@{|/img/products/${HoLy.image}|}" alt="single-product">
+                                <img class="secondary-img" th:src="@{|/img/products/${HoLy.image}|}" alt="single-product">
                             </a>
                                            
                                    
@@ -278,12 +275,12 @@
                                 <!-- Product Content Start -->
                                 <div class="pro-content">
                                     <div class="pro-info">
-                                        <h4><a href="chitiet">${HoLy.name }</a></h4>
-                                                <p><span class="price">${HoLy.price }₫</span></p>
+                                        <h4><a th:src="@{|/chitiet/${HoLy.id}|}">[[${HoLy.name}]]</a></h4>
+                                    <p><span class="price">[[${HoLy.unitPrice}]]₫</span></p>
                                     </div>
                                     <div class="pro-actions">
                                         <div class="actions-primary">
-                                             <a href="../add/${HoLy.id}" title="Thêm vào giỏ hàng"> + Thêm vào giỏ hàng</a>
+                                             <a href=""  th:attr="ng-click=@{|cart.add(${HoLy.id})|}" title="Thêm vào giỏ hàng"> + Thêm vào giỏ hàng</a>
                                         </div>
                                         <div class="actions-secondary">
                                            
@@ -293,7 +290,7 @@
                                 </div>
                                 <!-- Product Content End -->
                             </div>
-                            </c:forEach>
+                       
                             <!-- Single Product End -->
                              <!-- Single Product Start -->
      
