hé lô mấy cưng mình là Đinh Nguyễn Hải Sang hôm nay mình sẽ nói về sắc đẹp

--- a/Normal_J6/src/main/resources/templates/TaiKhoan/SignUp.html
+++ b/Normal_J6/src/main/resources/templates/TaiKhoan/SignUp.html
@@ -38,12 +38,17 @@
 						<i style="color:red"th:errors="*{email}"></i>
 						<i style="color:red"th:text="${ktEmail}"></i>
 						<input th:field="*{email}"type="text"name="email" placeholder="Nhập Email"/>
-						<div class="remember">
-			            
+	   
+					 	<div class="remember">
+			         
+						 <div class="forgot">
 						 
-						<div class="clear"> </div>
+						 
+						 	<h6>  <a href="/login">Đăng nhập</a></h6>
+						 </div>
+						<div class="clear" > </div>
 					  </div>
-					   
+						
 						<input type="submit" value="Đăng ký">
 					</form>	
 					
