--- a/Normal_J6/src/main/resources/templates/TaiKhoan/login.html
+++ b/Normal_J6/src/main/resources/templates/TaiKhoan/login.html
@@ -29,9 +29,11 @@
 						<input type="text"   name="username" placeholder="Tên đăng nhập"/>
 					<input type="password"   name="password" placeholder="Mật khẩu"/>
 						<div class="remember">
-			            
+			           <a style="color:white;" href="index"><< Trang chủ</a>
 						 <div class="forgot">
-						 	<h6><a href="#">Quên mật khẩu?</a></h6>
+						 
+						 
+						 	<h6>  <a href="/register">Đăng ký</a><a> || </a><a href="/fogetPass">Quên mật khẩu?</a></h6>
 						 </div>
 						<div class="clear" > </div>
 					  </div>
