xin chào mình Nguyễn Hồng Đăng

--- a/Normal_J6/src/main/resources/templates/TaiKhoan/FogetPass.html
+++ b/Normal_J6/src/main/resources/templates/TaiKhoan/FogetPass.html
@@ -20,7 +20,7 @@
 <div class="header">
 		<div class="header-main">
 		       <h2 style="color:white;text-align:center;font-size: 50px;padding-bottom: 0.8em">QUÊN MẬT KHẨU</h2>
-		       <center><span style="color:red" th:text="${tbForget}"></span></center>
+		       <center><span style="color:red" th:text="${tbforgotPassword}"></span></center>
 			<div class="header-bottom">
 				<div class="header-right w3agile">
 					
